[metadata]
name = bridgeanalyser
description = Analyse bridge hands
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = 
    bridgeanalyser
install_requires = 
    ddstable>=0.2.0
python_requires = >=3.6
package_dir = 
    =src
zip_safe = False